FIXED: driverDashboard text truncation

--- a/frontEnd/style/driverDashboard.css
+++ b/frontEnd/style/driverDashboard.css
@@ -155,7 +155,7 @@ body {
 }
 
 .trip-route-text .route-part {
-  max-width: 140px;
+  max-width: 240px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
